ubiquity (2.2.15) UNRELEASED; urgency=low

  * Move the install window color setting code closer to when the window
    is shown, so the colors don't get reset before then.
  * Fix alpha warning being shown all the time with recent changes to
    the KDE frontend.
  * Define allowed_change_step in the KDE frontend to fix the manual
    partitioner buttons not working (LP: #556180).

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 06 Apr 2010 10:20:32 +0100

ubiquity (2.2.14) lucid; urgency=low

  [ Jonathan Riddell ]
  * Update Kubuntu icon desktop/hi*-app-ubiquity.png for new logo

  [ Mario Limonciello ]
  * Don't bail out if oem-config/remove_extras doesn't exist yet since
    oem-config isn't actually installed. (LP: #554324, LP: #554664)

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 03 Apr 2010 15:20:32 -0500

ubiquity (2.2.13) lucid; urgency=low

  [ Evan Dandrea ]
  * In oem-config, support removing packages that were not part of the
    base install and are not needed in the final system by preseeding
    oem-config/remove_extras to true (LP: #315644, LP: #553184).

  [ Roman Shtylman ]
  * Kde_ui: 
    - fixed (LP: #550466) (LP: #550472) using kmessage box for quit dialog
    - fixed (LP: #540202) hide widgets until translated

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 01 Apr 2010 11:51:01 -0500

ubiquity (2.2.12) lucid; urgency=low

  [ Evan Dandrea ]
  * Accept and discard arguments to the KDE frontend's
    on_keyboard_layout_selected function (LP: #552399).

  [ Colin Watson ]
  * Fix pkgsel/ignore-incomplete-language-support check (LP: #527623).
  * KDE frontend:
    - Ensure that entries in extra_bar_frames are never None (LP: #536912).
    - Lock out manual partitioning operations while the partitioning backend
      is running (LP: #540203).
  * Don't lower-case the locale attribute on frontends.  This was added a
    long time ago; since then, it's become unnecessary since i18n.get_string